@@ -593,10 +593,10 @@ class tx_templavoila_module2 extends t3lib_SCbase {
 		}
 
 		if ($dsObj->isFilebased()) {
-			$onClick = 'document.location=\'' . $this->doc->backPath . 'file_edit.php?target=' . rawurlencode(PATH_site . $dsObj->getKey()) . '&returnUrl=' . rawurlencode( t3lib_div::sanitizeLocalUrl(t3lib_div::getIndpEnv('REQUEST_URI'))) . '\';';
-			$dsIcon = '<a href="#" onclick="' . htmlspecialchars($onClick) . '"><img'.t3lib_iconWorks::skinImg($this->doc->backPath,'gfx/fileicons/xml.gif','width="18" height="16"').' alt="" class="absmiddle" /></a>';
+			$onClick = 'document.location=\'' . $this->doc->backPath . 'file_edit.php?target=' . rawurlencode(PATH_site . $dsObj->getKey()) . '&returnUrl=' . rawurlencode(tx_templavoila_div::sanitizeLocalUrl(t3lib_div::getIndpEnv('REQUEST_URI'))) . '\';';
+			$dsIcon = '<a href="#" onclick="' . htmlspecialchars($onClick) . '"><img'.t3lib_iconWorks::skinImg($this->doc->backPath,'gfx/fileicons/xml.gif','width="18" height="16"').' alt="" title="' . $dsObj->getKey() . '" class="absmiddle" /></a>';
 		} else {
-			$dsIcon = tx_templavoila_icons::getIconForRecord('tx_templavoila_datastructure' ,array());
+			$dsIcon = tx_templavoila_icons::getIconForRecord('tx_templavoila_datastructure' ,array(), array('title' => $dsObj->getKey()));
 			$dsIcon = $this->doc->wrapClickMenuOnIcon($dsIcon, 'tx_templavoila_datastructure', $dsObj->getKey(), 1, '&callingScriptId='.rawurlencode($this->doc->scriptID));
 		}
 
@@ -714,7 +714,7 @@ class tx_templavoila_module2 extends t3lib_SCbase {
 	function renderTODisplay($toObj, $scope, $children=0)	{
 
 			// Put together the records icon including content sensitive menu link wrapped around it:
-		$recordIcon = tx_templavoila_icons::getIconForRecord('tx_templavoila_tmplobj', array());
+		$recordIcon = tx_templavoila_icons::getIconForRecord('tx_templavoila_tmplobj', array(), array('title' => $toObj->getKey()));
 		$recordIcon = $this->doc->wrapClickMenuOnIcon($recordIcon, 'tx_templavoila_tmplobj', $toObj->getKey(), 1, '&callingScriptId='.rawurlencode($this->doc->scriptID));
 
 			// Preview icon:
